[package]
name = "cidacake-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.3"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.18.26"
serde_json = "1.0"
tempfile = "3.10"

[[bin]]
name = "extract_pubkey"
path = "src/bin/extract_pubkey.rs"