[package]
name = "cidacake-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.16"
borsh = "0.10.3"
spl-token = { version = "5.0.1", features = ["no-entrypoint"] }
bs58 = "0.4"

[dev-dependencies]
solana-sdk = "2.1.16"
serde_json = "1.0"
tempfile = "3.10"